Ricardo Muniz - commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,12 @@
         android:name="br.com.corelib.module.MainApplication"
         android:theme="@style/Theme.SendEvent">
         <activity
-            tools:ignore="ExtraText,IntentFilterExportedReceiver,MissingPrefix"
-            android:label="@string/app_name"
             android:name=".MainActivity"
-            android:theme="@style/Theme.SendEvent.NoActionBar">
+            android:exported="true"
+            android:theme="@style/Theme.SendEvent.NoActionBar"
+            tools:ignore="ExtraText,IntentFilterExportedReceiver,MissingPrefix">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
