--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
+
 android {
-    ext.target = 29
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    ext.target = 33
+    compileSdkVersion = 33
 
     defaultConfig {
         applicationId "br.com.sendevent"
@@ -54,15 +54,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation "com.google.android.material:material:$material_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation 'com.google.android:flexbox:0.2.6'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
@@ -73,11 +74,9 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
     androidTestImplementation "org.koin:koin-test:$koin_version"
 
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation "com.github.bumptech.glide:glide:$glide_version"
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation project(path: ':corelib')
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 }
