--- a/corelib/build.gradle
+++ b/corelib/build.gradle
@@ -5,15 +5,12 @@ plugins {
 }
 
 android {
-    ext.target = 29
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    ext.target = 33
+    compileSdkVersion = 33
 
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion target
-        versionCode 1
-        versionName "1.0"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -41,17 +38,17 @@ android {
 
 dependencies {
 
-    def lifecycle_version = '2.3.1'
+    def lifecycle_version = '2.4.1'
     def multidex_version = '2.0.1'
-    def activity_version = '1.2.3'
-    def fragment_version = '1.3.6'
-    def nav_version = '2.3.5'
+    def activity_version = '1.4.0'
+    def fragment_version = '1.4.1'
+    def nav_version = '2.4.2'
     def material_version = '1.0.0'
-    def core_ktx_version = '1.6.0'
+    def core_ktx_version = '1.8.0'
     def junit_version = '4.13.2'
     def legacy_version = '1.0.0'
     def compat_version = '1.3.0'
-    def mockito_core_version = '3.2.4'
+    def mockito_core_version = '4.5.1'
     def koin_version = '2.1.5'
     def glide_version = '4.11.0'
     def circle_image_version = '3.0.0'
@@ -59,8 +56,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.core:core-ktx:$core_ktx_version"
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "androidx.appcompat:appcompat:$compat_version"
     implementation "androidx.legacy:legacy-support-v4:$legacy_version"
@@ -68,17 +65,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "de.hdodenhof:circleimageview:$circle_image_version"
     implementation "com.google.android.material:material:$material_version"
-
-    implementation 'de.greenrobot:androidsvg:1.2.2-beta-1-tweaked-2'
-
-    // Parse JSON - GSON
-    implementation 'com.google.code.gson:gson:2.8.5'
-
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.github.stfalcon:StfalconPriceRangeBar:0.1.2'
-    implementation 'io.coil-kt:coil:1.1.0'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
@@ -98,15 +84,16 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.itkacher.okhttpprofiler:okhttpprofiler:1.0.7'
 
     implementation "androidx.multidex:multidex:$multidex_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.10"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
 }
+
 repositories {
     mavenCentral()
 }
