--- a/corelib/src/main/AndroidManifest.xml
+++ b/corelib/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="br.com.corelib">
 
     <uses-sdk android:minSdkVersion="19"
-        android:targetSdkVersion="29.0.2"
+        android:targetSdkVersion="33.0.0"
         tools:ignore="GradleOverrides"
-        tools:overrideLibrary="br.com.core" />
+        tools:overrideLibrary="br.com.corelib" />
 </manifest>
